# server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  check.yml
src/: account.rs  auth.rs  errors.rs  main.rs  message.rs  migrations.rs  routes.rs  ws.rs
