[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.8" }
axum = { version = "0.5", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
scylla = { version = "0.4.7" }
pgp = { version = "0.8" }
redis = { version = "0.21", features = ["aio", "r2d2", "cluster", "tokio-comp", "connection-manager"], default-features = false }
redis-subscribe = { version = "0.2.1" }