[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.8" }
tweechat-datatypes = { version = "0.0.1" }
totp-rs = { version = "2.0", features = ["qr", "serde_support"] }
thiserror = { version = "1.0" }
axum = { version = "0.5", features = ["ws", "headers"] }
async-trait = { version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1"}
scylla = { version = "0.4.7" }
sha2 = { version = "0.10" }
rand = { version = "0.8" }
redis-subscribe = { version = "0.2.1" }
redis = { version = "0.21" }
deadpool-redis = { version = "0.10" }